Added user documentation.
